# conc-map-bench

./: Cargo.toml  README.md
results/: Exchange.ahash.csv  Exchange.foldhash.csv  Exchange.fxhash.csv  Exchange.hashless.csv  Exchange.std.csv  RapidGrow.ahash.csv  RapidGrow.foldhash.csv  RapidGrow.fxhash.csv  RapidGrow.hashless.csv  RapidGrow.std.csv  ReadHeavy.ahash.csv  ReadHeavy.foldhash.csv  ReadHeavy.fxhash.csv  ReadHeavy.hashless.csv  ReadHeavy.std.csv
results.bk/results/: ReadHeavy.std.csv
scripts/: bench.bash  bench.sh  plot.bash  plot.sh
src/: bench.rs  main.rs  plot.rs  workloads.rs
src/adapters/: flurry.rs  hashbrown.rs  mod.rs  papaya.rs
