[package]
name = "conc-map-bench"
version = "0.1.0"
authors = ["Joel Wejdenstål <joel.wejdenstal@gmail.com>"]
edition = "2024"
publish = false

[dependencies]
bustle = "0.5.1"
tracing-subscriber = "0.3.19"
num_cpus = "1.16.0"
ahash = "0.8.11"
chashmap = "2.2.2"
contrie = "0.1.4"
flurry = "0.4.0"
dashmap = { version = "7.0.0-rc2", features = ["inline-more"] }
crossbeam-epoch = { version = "0.9.18", package = "crossbeam-epoch" }
parking_lot = "0.12.3"
evmap = "10.0.2"
seize = "0.2.5"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam" }
structopt = "0.3.26"
json = "0.12.4"
csv = "1.3.1"
serde = { version = "1.0.218", features = ["derive"] }
plotters = "0.3.7"
scc = "2.3.3"
papaya = "0.2.0"
foldhash = "0.1.4"

[profile.release]
codegen-units = 1
panic = "abort"
lto = "thin"
