[package]
name = "conc-map-bench"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2024"
publish = false

[dependencies]
ahash = "0.8.12"
bustle = "0.5.1"
chashmap = "2.2.2"
contrie = "0.1.4"
crossbeam-epoch = { version = "0.9.18", package = "crossbeam-epoch" }
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam" }
csv = "1.3.1"
dashmap = { version = "6.1.0", features = ["inline"] }
evmap = "10.0.2"
flurry = "0.5.2"
foldhash = "0.1.5"
hashbrown = { version = "0.15.3", features = ["inline-more"] }
json = "0.12.4"
num_cpus = "1.16.0"
papaya = "0.2.1"
parking_lot = "0.12.3"
plotters = "0.3.7"
rustc-hash = "2.1.1"
scc = "2.3.4"
seize_old = { version = "0.3.3", package = "seize" }
seize = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
structopt = "0.3.26"
tracing-subscriber = "0.3.19"

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"
